Fix full screen button issue on mobile size

--- a/src/ui/elements/media-viewer/media-viewer.styl
+++ b/src/ui/elements/media-viewer/media-viewer.styl
@@ -38,8 +38,8 @@
 
 .navButton
   position: absolute
-  top: 48px
-  height: calc(100% - 96px - env(safe-area-inset-bottom, 0) - env(safe-area-inset-top, 0))
+  top: 45%
+  height: 10%
   border-radius: 0
   background-color: transparent
 
